edition = "2023";  // successor to proto2 and proto3

package storage;
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_OPAQUE;

message NetworkGraphConfig {
  string id = 2; // @gotags: sql:"pk"
  bool hide_default_external_srcs = 1;
}
